[package]
name = "crypto-paillier"
version = "0.0.1-pre.0"
edition = "2021"
rust-version = "1.84"

repository = "https://github.com/lleoha/crypto-paillier"
description = "TBD"
license = "Apache-2.0 OR MIT"
categories = ["algorithms", "cryptography", "mathematics"]
keywords = ["crypto", "paillier", "homomorphic", "encryption"]
readme = "README.md"

[dependencies]
crypto-bigint = { version = "0.6.1", features = ["rand_core"] }
