[package]
name = "crypto-paillier"
version = "0.0.1-pre.2"
edition = "2024"
rust-version = "1.85"

repository = "https://github.com/lleoha/crypto-paillier"
description = "TBD"
license = "Apache-2.0 OR MIT"
categories = ["algorithms", "cryptography", "mathematics"]
keywords = ["cryptography", "paillier", "homomorphic", "cipher", "encryption"]
readme = "README.md"

[dependencies]
crypto-bigint = { version = "0.6.1", features = ["rand_core"] }
crypto-primes = { version = "0.6.1" }

[dev-dependencies]
rand_chacha = { version = "0.3.1" }
