[package]
name = "crypto-paillier"
version = "0.0.1-pre.2"
edition = "2024"
rust-version = "1.85"

repository = "https://github.com/lleoha/crypto-paillier"
description = "TBD"
license = "Apache-2.0 OR MIT"
categories = ["algorithms", "cryptography", "mathematics"]
keywords = ["cryptography", "paillier", "homomorphic", "cipher", "encryption"]
readme = "README.md"

[dependencies]
crypto-bigint = { version = "0.7.0-pre.0", default-features = false, features = ["rand_core"] }
crypto-primes = { version = "0.7.0-pre.0", default-features = false }
rand_core = { version = "0.9.2", default-features = false }
subtle = {  version = "2.6.1", default-features = false, features = ["const-generics"] }

[dev-dependencies]
rand_chacha = { version = "0.9.0" , features = ["os_rng"]}
